--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,26 +49,25 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'com.google.firebase:firebase-auth:22.2.0'
     implementation 'com.squareup.picasso:picasso:2.8'
-    implementation 'com.google.firebase:firebase-database:20.1.0'
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.google.firebase:firebase-database:20.3.0'
+    implementation 'com.google.code.gson:gson:2.9.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-
-    // Import the BoM for the Firebase platform
-    implementation(platform("com.google.firebase:firebase-bom:32.5.0"))
-
-    // Add the dependency for the Firebase ML model downloader library
-    // When using the BoM, you don't specify versions in Firebase library dependencies
-    implementation("com.google.firebase:firebase-ml-modeldownloader")
-
-    implementation 'com.google.firebase:firebase-ml-model-interpreter:22.0.4'
+    implementation platform('com.google.firebase:firebase-bom:26.2.0')
 
 
-    implementation 'org.tensorflow:tensorflow-lite:2.8.0'
+
+
+    implementation 'com.google.firebase:firebase-ml-model-interpreter'
+
+    implementation 'org.tensorflow:tensorflow-lite:2.3.0'
+    
+
+
 
 
 
