--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ buildscript {
     }
     repositories {
         google()
+        mavenCentral()
+        mavenLocal()
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
