--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,21 +65,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-ml-model-interpreter'
 
     implementation 'org.tensorflow:tensorflow-lite:2.3.0'
-    
 
 
 
 
 
-
-
-
-
-
-
-
-
-
+    implementation("com.google.cloud:gapic-google-cloud-ai-generativelanguage-v1beta3-java:0.0.0-SNAPSHOT")
+    implementation("io.grpc:grpc-okhttp:1.53.0")
 
 
 
