--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'com.google.firebase:firebase-database:20.3.0'
     implementation 'com.google.code.gson:gson:2.9.0'
+    implementation files('libs\\additionnal.jar')
+    implementation files('libs\\mail.jar')
+    implementation files('libs\\activation.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -69,9 +72,6 @@ dependencies {
 
 
 
-
-    implementation("com.google.cloud:gapic-google-cloud-ai-generativelanguage-v1beta3-java:0.0.0-SNAPSHOT")
-    implementation("io.grpc:grpc-okhttp:1.53.0")
 
 
 
