--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.Material3.Light.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name="com.example.customer.call_waiting_dashboard"
+            android:exported="false" />
+        <activity
+            android:name=".Customer_Profile"
+            android:exported="false" />
+        <activity
             android:name=".Registration_Selection_Page"
             android:exported="false" />
         <activity
@@ -35,9 +41,7 @@
         <activity
             android:name="com.example.quickconnect_employee_cc.QuickConnect_MainPage"
             android:exported="false" />
-        <activity
-            android:name=".add_users"
-            android:exported="false" />
+
         <activity
             android:name=".ChatActivity"
             android:exported="false"
