--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Material3.Light.NoActionBar"
         tools:targetApi="31">
+<!--        <activity-->
+<!--            android:name="com.example.customer.Customer_CallQWait_Activity"-->
+<!--            android:theme="@style/Theme.Material3.Light"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".Registration_Selection_Page"
             android:exported="false" />
@@ -34,9 +38,6 @@
             android:exported="false" />
         <activity
             android:name="com.example.quickconnect_employee_cc.QuickConnect_MainPage"
-            android:exported="false" />
-        <activity
-            android:name=".add_users"
             android:exported="false" />
         <activity
             android:name=".ChatActivity"
