--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:theme="@style/Theme.Material3.Light.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".transactions"
+            android:exported="false" />
+        <activity
             android:name="com.example.customer.call_waiting_dashboard"
             android:exported="false" />
         <activity
@@ -48,7 +51,6 @@
         <activity
             android:name="com.example.quickconnect_employee_cc.QuickConnect_MainPage"
             android:exported="false" />
-
         <activity
             android:name=".ChatActivity"
             android:exported="false"
