Video call , ai chatbot prototype , text to speech

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     namespace 'com.example.quickconnect'
-    compileSdk 33
+    compileSdk 34
 
     viewBinding {
         enabled = true
@@ -14,11 +14,13 @@ android {
     defaultConfig {
         applicationId "com.example.quickconnect"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
-        versionName "1.0"
-
+        versionName '1.0'
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+
     }
 
 
@@ -58,6 +60,11 @@ dependencies {
     implementation files('libs\\additionnal.jar')
     implementation files('libs\\mail.jar')
     implementation files('libs\\activation.jar')
+
+    //FIREBASE
+    implementation 'com.google.firebase:firebase-messaging:23.4.0'
+    implementation 'com.google.firebase:firebase-firestore:24.10.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -72,14 +79,43 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite:2.3.0'
 
 
+    // Video Call
+
+     // Scalable Size Unit (support for different screen sizes)
+    //noinspection GradleDynamicVersion
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.intuit.ssp:ssp-android:1.0.6'
+
+    //RecyclerView
+    implementation'androidx.recyclerview:recyclerview:1.2.1'
+
+    // Material Design
+    implementation 'com.google.android.material:material:1.11.0'
+
+    //MultiDex
+    implementation 'androidx.multidex:multidex:2.0.1'
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+
+    //Swipe Refresh Layout
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
+
+//jitsi
 
 
 
+    //cometchat
+//    implementation 'com.cometchat:chat-sdk-android:4.0.4'
 
 //    implementation("com.google.cloud:gapic-google-cloud-ai-generativelanguage-v1beta3-java:0.0.0-SNAPSHOT")
 //    implementation("io.grpc:grpc-okhttp:1.53.0")
 
 
+    implementation 'com.github.ZEGOCLOUD:zego_uikit_signaling_plugin_android:1.4.o'    // add
+    implementation 'com.github.ZEGOCLOUD:zego_uikit_prebuilt_call_android:+'
 
 
 }
