--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PROJECTION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
 
     <application
         android:allowBackup="true"
@@ -29,8 +31,9 @@
             android:name=".WebViewer"
             android:exported="false" />
         <activity
-            android:name="com.example.palmchatbot.QC_ChatBot_Main"
-            android:exported="true">
+            android:name="com.example.palmchatbot.Chatbot_Activity"
+            android:exported="true"
+            android:theme="@style/Theme.Material3.Light" />
 
 <!--            <intent-filter>-->
 <!--                <action android:name="android.intent.action.MAIN" />-->
@@ -39,8 +42,6 @@
 <!--                <category android:name="android.intent.category.LAUNCHER" />-->
 <!--            </intent-filter>-->
 
-
-        </activity>
         <activity
             android:name="com.example.speechtotext.s2t"
             android:exported="true">
@@ -50,17 +51,17 @@
 <!--                <category android:name="android.intent.category.LAUNCHER" />-->
 <!--            </intent-filter>-->
         </activity>
-        <activity
-            android:name="com.example.palmchatbot.palm_ai_chatbot"
-            android:exported="true">
+<!--        <activity-->
+<!--            android:name="com.example.palmchatbot.Chatbot_OLD_Fragment"-->
+<!--            android:exported="true">-->
 
-             <intent-filter>
-             <action android:name="android.intent.action.MAIN" />
+<!--&lt;!&ndash;             <intent-filter>&ndash;&gt;-->
+<!--&lt;!&ndash;             <action android:name="android.intent.action.MAIN" />&ndash;&gt;-->
 
 
-             <category android:name="android.intent.category.LAUNCHER" />
-             </intent-filter>
-        </activity>
+<!--&lt;!&ndash;             <category android:name="android.intent.category.LAUNCHER" />&ndash;&gt;-->
+<!--&lt;!&ndash;             </intent-filter>&ndash;&gt;-->
+<!--        </activity>-->
         <activity
             android:name="com.example.customer.practice"
             android:exported="false" />
@@ -87,7 +88,8 @@
             android:exported="false" />
         <activity
             android:name="com.example.customer.Customer_Main"
-            android:exported="false" />
+            android:exported="false"
+            />
         <activity
             android:name="com.example.quickconnect_employee_cc.Employee_CallCentre_Main"
             android:exported="false" />
@@ -97,7 +99,8 @@
         <activity
             android:name=".ChatActivity"
             android:exported="false"
-            android:theme="@style/Theme.Material3.Light" />
+            android:theme="@style/Theme.Material3.Light"
+            android:hardwareAccelerated="true"/>
         <activity
             android:name=".registration"
             android:exported="false"
@@ -106,12 +109,12 @@
             android:name=".Login"
             android:exported="true">
 
-<!--             <intent-filter>-->
-<!--             <action android:name="android.intent.action.MAIN" />-->
+             <intent-filter>
+             <action android:name="android.intent.action.MAIN" />
 
 
-<!--             <category android:name="android.intent.category.LAUNCHER" />-->
-<!--             </intent-filter>-->
+             <category android:name="android.intent.category.LAUNCHER" />
+             </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
