--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,20 +22,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Material3.Light.NoActionBar"
+        android:theme="@style/Base.Theme.QuickConnect"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-        <activity
-            android:name="com.example.customer.SettingsActivity"
-            android:exported="true">
+<!--        <activity-->
+<!--            android:name="com.example.customer.Language_Change"-->
+<!--            android:exported="false">-->
 
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--&lt;!&ndash;            <intent-filter>&ndash;&gt;-->
+<!--&lt;!&ndash;                <action android:name="android.intent.action.MAIN" />&ndash;&gt;-->
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+<!--&lt;!&ndash;                <category android:name="android.intent.category.LAUNCHER" />&ndash;&gt;-->
+<!--&lt;!&ndash;            </intent-filter>&ndash;&gt;-->
 
-        </activity>
+<!--        </activity>-->
 
 
         <activity
@@ -45,12 +45,12 @@
             android:name="com.example.palmchatbot.QC_ChatBot_Main"
             android:exported="true">
 
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
+             <intent-filter>
+             <action android:name="android.intent.action.MAIN" />
 
 
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
+             <category android:name="android.intent.category.LAUNCHER" />
+             </intent-filter>
 
         </activity>
 
@@ -65,9 +65,9 @@
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
-        <activity
-            android:name="com.example.customer.practice"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name="com.example.customer.practice"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".transactions"
             android:exported="false" />
@@ -117,15 +117,20 @@
              <category android:name="android.intent.category.LAUNCHER" />
              </intent-filter>
         </activity>
+
+
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
         <activity
             android:name=".MainActivity"
             android:exported="false" />
-        <activity
-            android:name="com.example.Voice_Video_Call.MainVVActivity"
-            android:exported="false" />
-        <activity
-            android:name="com.example.Voice_Video_Call.LoginVVActivity"
-            android:exported="true">
+<!--        <activity-->
+<!--            android:name="com.example.Voice_Video_Call.MainVVActivity"-->
+<!--            android:exported="false" />-->
+<!--        <activity-->
+<!--            android:name="com.example.Voice_Video_Call.LoginVVActivity"-->
+<!--            android:exported="true">-->
 
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
@@ -134,7 +139,7 @@
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
 
-        </activity>
+<!--        </activity>-->
 
         <meta-data
             android:name="preloaded_fonts"
