--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -27,37 +26,28 @@
         android:theme="@style/Base.Theme.QuickConnect"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-<!--        <activity-->
-<!--            android:name="com.example.customer.Language_Change"-->
-<!--            android:exported="false">-->
 
-<!--&lt;!&ndash;            <intent-filter>&ndash;&gt;-->
-<!--&lt;!&ndash;                <action android:name="android.intent.action.MAIN" />&ndash;&gt;-->
-
-<!--&lt;!&ndash;                <category android:name="android.intent.category.LAUNCHER" />&ndash;&gt;-->
-<!--&lt;!&ndash;            </intent-filter>&ndash;&gt;-->
-
-<!--        </activity>-->
-
-
+        <activity
+            android:name=".SplashScreen_New"
+            android:exported="false" /> <!-- <activity -->
+        <!-- android:name="com.example.customer.Language_Change" -->
+        <!-- android:exported="false"> -->
+        <!-- &lt;!&ndash;            <intent-filter>&ndash;&gt; -->
+        <!-- &lt;!&ndash;                <action android:name="android.intent.action.MAIN" />&ndash;&gt; -->
+        <!-- &lt;!&ndash;                <category android:name="android.intent.category.LAUNCHER" />&ndash;&gt; -->
+        <!-- &lt;!&ndash;            </intent-filter>&ndash;&gt; -->
+        <!-- </activity> -->
         <activity
             android:name=".WebViewer"
             android:exported="false" />
         <activity
             android:name="com.example.palmchatbot.Chatbot_Activity"
             android:exported="true"
-            android:theme="@style/Theme.Material3.Light" />
+            android:theme="@style/Theme.Material3.Light" /> <!-- <intent-filter> -->
+        <!-- <action android:name="android.intent.action.MAIN" /> -->
+        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+        <!-- </intent-filter> -->
 
-<!--             <intent-filter>-->
-<!--             <action android:name="android.intent.action.MAIN" />-->
-
-
-<!--             <category android:name="android.intent.category.LAUNCHER" />-->
-<!--             </intent-filter>-->
-
-        <activity
-            android:name="com.example.palmchatbot.palm_ai_chatbot"
-            android:exported="true">
 
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
@@ -65,19 +55,14 @@
 
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
-        </activity>
-<!--        <activity-->
-<!--            android:name="com.example.palmchatbot.Chatbot_OLD_Fragment"-->
-<!--            android:exported="true">-->
-
-<!--&lt;!&ndash;             <intent-filter>&ndash;&gt;-->
-<!--&lt;!&ndash;             <action android:name="android.intent.action.MAIN" />&ndash;&gt;-->
-
-
-<!--&lt;!&ndash;             <category android:name="android.intent.category.LAUNCHER" />&ndash;&gt;-->
-<!--&lt;!&ndash;             </intent-filter>&ndash;&gt;-->
-<!--        </activity>-->
-
+       <!-- <activity -->
+        <!-- android:name="com.example.palmchatbot.Chatbot_OLD_Fragment" -->
+        <!-- android:exported="true"> -->
+        <!-- &lt;!&ndash;             <intent-filter>&ndash;&gt; -->
+        <!-- &lt;!&ndash;             <action android:name="android.intent.action.MAIN" />&ndash;&gt; -->
+        <!-- &lt;!&ndash;             <category android:name="android.intent.category.LAUNCHER" />&ndash;&gt; -->
+        <!-- &lt;!&ndash;             </intent-filter>&ndash;&gt; -->
+        <!-- </activity> -->
         <activity
             android:name=".transactions"
             android:exported="false" />
@@ -101,19 +86,18 @@
             android:exported="false" />
         <activity
             android:name="com.example.customer.Customer_Main"
-            android:exported="false"
-            />
+            android:exported="false" />
         <activity
             android:name="com.example.quickconnect_employee_cc.Employee_CallCentre_Main"
             android:exported="false" />
-        <activity
-            android:name="com.example.quickconnect_employee_cc.QuickConnect_MainPage"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name="com.example.quickconnect_employee_cc.QuickConnect_MainPage"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".ChatActivity"
             android:exported="false"
-            android:theme="@style/Theme.Material3.Light"
-            android:hardwareAccelerated="true"/>
+            android:hardwareAccelerated="true"
+            android:theme="@style/Theme.Material3.Light" />
         <activity
             android:name=".registration"
             android:exported="false"
@@ -121,47 +105,36 @@
         <activity
             android:name=".Login"
             android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-             <intent-filter>
-             <action android:name="android.intent.action.MAIN" />
-
-
-             <category android:name="android.intent.category.LAUNCHER" />
-             </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
-             <intent-filter>
-             <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-
-             <category android:name="android.intent.category.LAUNCHER" />
-             </intent-filter>
-        </activity>
-
-
-
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-<!--        <activity-->
-<!--            android:name=".MainActivity"-->
-<!--            android:exported="false" />-->
-<!--        <activity-->
-<!--            android:name="com.example.Voice_Video_Call.MainVVActivity"-->
-<!--            android:exported="false" />-->
-<!--        <activity-->
-<!--            android:name="com.example.Voice_Video_Call.LoginVVActivity"-->
-<!--            android:exported="true">-->
-
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
-
-<!--        </activity>-->
-
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity> <!-- <intent-filter> -->
+        <!-- <action android:name="android.intent.action.MAIN" /> -->
+        <!-- <activity -->
+        <!-- android:name=".MainActivity" -->
+        <!-- android:exported="false" /> -->
+        <!-- <activity -->
+        <!-- android:name="com.example.Voice_Video_Call.MainVVActivity" -->
+        <!-- android:exported="false" /> -->
+        <!-- <activity -->
+        <!-- android:name="com.example.Voice_Video_Call.LoginVVActivity" -->
+        <!-- android:exported="true"> -->
+        <!-- <intent-filter> -->
+        <!-- <action android:name="android.intent.action.MAIN" /> -->
+        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+        <!-- </intent-filter> -->
+        <!-- </activity> -->
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
